Fixed the Search Strategy for the Professor